--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     
     <!--Pocetni ekran za upis imena-->
    <div id="upisiIgrace" class="upisiIgrace">
-        <h2>Upisite imena igraca</h2>
+        <h2>Enter the names of the players</h2>
         <label for="player1">Player 1:<input type="text" id="player1" placeholder="Ime"></label>
         <label for="player2">Player 2:<input type="text" id="player2" placeholder="Ime"></label>
-        <button id="pokreniIgru">Pokreni igru</button>
+        <button id="pokreniIgru">Start</button>
    </div>
   
 
@@ -38,15 +38,15 @@
         <!--Prikaz rezultata-->
         <div class="igraci">
             <p><span id="igracPrvi"></span> <b class="tekst">(X)</b><br><span id="broj1">0</span></p>
-            <p>Nereseno<br><span id="nereseno">0</span></p>
+            <p>Draw<br><span id="nereseno">0</span></p>
             <p><span id="igracDrugi"></span> <b class="tekst">(O)</b><br><span id="broj2">0</span></p>
         </div>
 
         <!--Prikaz dugmeta-->
         <div class="presek">
-            <button id="restartPartije">Restart partije</button>
-            <button id="restartRezultata">Restart rezultata</button>
-            <button id="restartCelokupneIgre">Restart celokupne igre</button>
+            <button id="restartPartije">Restart</button>
+            <button id="restartRezultata">Restart the result</button>
+            <button id="restartCelokupneIgre">Restart the game</button>
         </div>
     </div>
 
@@ -55,4 +55,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
